9.0 - 
Removed support for netstandard1.1 and netstandard1.6
Removed WithLocalizedMessage (WithMessage that takes a callback is the replacement)
Removed ResourceName from ValidationFailure
Removed ResourceName and ResourceType from IStringSource.
Removed SetCollectionValidator which was deprecated in 8.0
Additional overload of OnAnyFailure that can receive a collection of validation failures

8.5.0 - 
Add ASP.NET Core-compatible version of the email address validator.
Simplify the advanced testhelper syntax.
Add support for ASP.NET Core 3.
Add support for defining child rules inline.
ValidatorDescriptor now has consistent handling of model-level rules.

8.4.0 - 10 May 2019
Added simplified version of several messages across all translations to aid with ASP.NET Clientside validation.
New enum validator for string properties.

8.3.0 - 24 April 2019
Fix issue in ASP.NET Core integration with GetServiceProvider not working correctly when invoked against a CustomContext/MessageBuilderContext.
Improved how LanguageStringSource works with error-code overrides.
Fix thread-safety issue with use of PropertyValidatorOptions.Empty (now removed).
Improved how calls to When/Unless are handled internally.
DelegatingValidator is now marked as deprecated.
Improvements to Croatian language translations.
Improvements to Georgian language translations.
Resolved subtle bug where top-level WhenAsync wouldn't work correctly when wrapping a top-level call to When.

8.2.3 - 12 April 2019
Fix issue with WebApi integration where DataAnnotations validation could generate duplicate messages when used in the same 
project as FluentValidation.

8.2.2 - 5 April 2019 
Fix typo in FluentValidation.DependencyInjectionExtensions package name.

8.2.1 - 4 April 2019
Resolved issue using InjectValidator with RuleForEach.
Add support for a default IValidatorInterceptor to be registered with the ASP.NET Core Service Provider.